# HoneyBear-Folio

./: CONTRIBUTING.md  LICENSE  README.md  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-changelog-config.json
.github/workflows/: auto-label.yml  lint-and-format.yml  release.yml
app/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/flatpak/: com.bernatbc.honeybearfolio.desktop  com.bernatbc.honeybearfolio.metainfo.xml  com.bernatbc.honeybearfolio.yml
app/scripts/: build-flatpak.sh
app/src/: App.css  App.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  test_helpers.rs
app/src-tauri/src/tests/: common.rs  mod.rs
app/src-tauri/src/tests/accounts/: delete_account.rs
app/src-tauri/src/tests/brokerage/: update_brokerage_counterpart_absent.rs  update_brokerage_move.rs  update_brokerage_transaction.rs
app/src-tauri/src/tests/multicurrency/: custom_rates_tests.rs  mod.rs  multicurrency_tests.rs
app/src-tauri/src/tests/payees/: payees_categories.rs
app/src-tauri/src/tests/property/: property_invariants.rs  property_proptest.rs
app/src-tauri/src/tests/rules/: create_rule.rs  delete_rule.rs  mod.rs  order_rules.rs  update_rule.rs
app/src-tauri/src/tests/transactions/: create_transaction.rs  delete_transaction.rs  transaction_edge_cases.rs  transfer.rs  update_transaction.rs
app/src/components/: AccountDetails.jsx  AccountList.jsx  AccountModal.jsx  ChartNumberFormatSync.jsx  ConfirmDialog.jsx  CustomRateDialog.jsx  CustomSelect.jsx  Dashboard.jsx  DevTools.jsx  ErrorBoundary.jsx  ExportModal.jsx  FireCalculator.jsx  ImportModal.jsx  InvestmentDashboard.jsx  RulesList.jsx  SankeyDiagram.jsx  SettingsModal.jsx  Sidebar.jsx  Toast.jsx  UpdateNotification.jsx  WelcomeWindow.jsx
app/src/config/: contributors.js  dev-settings.js
app/src/contexts/: NumberFormatContext.jsx  ThemeContext.jsx  confirm.js  number-format.js  theme-core.js  toast.js
app/src/hooks/: useCustomRate.jsx
app/src/i18n/: en.json  i18n.js
app/src/styles/: App.css  Dashboard.css  ExportModal.css  Modal.css  SettingsModal.css  Sidebar.css  Toast.css  datepicker.css  theme.css
app/src/utils/: currencies.js  format.js  networth.js
