[package]
name = "HoneyBear-Folio"
version = "0.1.0"
description = "HoneyBear Folio is a cross-platform personal finance desktop application built with Tauri (Rust backend), React (frontend), and SQLite (local database). It focuses on fast local data management (transactions, categories, budgets), clear dashboards and charts, portfolio tracking via Yahoo Finance market data, and import/export to common formats."
authors = ["BernatBC"]
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "../../LICENSE"
homepage = "https://github.com/BernatBC/HoneyBear-Folio"
repository = "https://github.com/BernatBC/HoneyBear-Folio"
readme = "../README.md"
keywords = ["tauri", "finance", "personal-finance", "portfolio"]
categories = ["utilities", "finance"]
documentation = "https://github.com/BernatBC/HoneyBear-Folio#readme"

[package.metadata.deb]
maintainer = "BernatBC"
depends = ["libwebkit2gtk-4.1-0", "libappindicator3-1", "librsvg2-2", "libgtk-3-0", "patchelf"]
priority = "optional"
section = "utils"
homepage = "https://github.com/BernatBC/HoneyBear-Folio"

[package.metadata.rpm]
summary = "Cross-platform personal finance desktop app."
description = "HoneyBear Folio is a cross-platform personal finance desktop application built with Tauri, React, and SQLite. It focuses on fast local data management, clear dashboards and charts, portfolio tracking, and import/export to common formats."
license = "GPL-3.0-or-later"
url = "https://github.com/BernatBC/HoneyBear-Folio"
vendor = "BernatBC"
packager = "BernatBC"
group = "Applications/Utilities"
requires = ["libwebkit2gtk-4.1", "libappindicator3", "librsvg2", "gtk3", "patchelf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"

